--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,13 @@ Flask>=0.10
 flask-restful>=0.2.12
 SQLAlchemy>=0.9.7
 Flask-SQLAlchemy>=2.0
+SQLAlchemy-Utils>=0.26.16
 docker-py>=0.5.0
 jsonschema>=2.4.0
 layered-yaml-attrdict-config>=14.09.3
 port-for>=0.3.1
+Requests>=2.4.1
+flask_oauthlib>=0.7.0
+WTForms>=2.0.1
+Flask-WTF>=0.10.2
+Flask-Login>=0.2.11
