Creating the dashboard component

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,9 @@ classifier =
 [files]
 packages =
     c9hubapi
+    c9hubdashboard
 
 [entry_points]
 console_scripts =
     c9hub-api = c9hubapi.main:main
+    c9hub-dashboard = c9hubdashboard.main:main 
