Starting to put the dev environment in containers

--- a/etc/docker/c9hub-common/Dockerfile
+++ b/etc/docker/c9hub-common/Dockerfile
@@ -1,5 +1,9 @@
 FROM python:3.4-onbuild
 
-ADD src.tar.gz /usr/src/app/
-CMD [ "python", "setup.py", "install" ]
-CMD [ "which", "c9hub-api" ]
+# for dev
+RUN python setup.py develop
+
+
+
+
+
