--- a/etc/docker/c9hub-common/Makefile
+++ b/etc/docker/c9hub-common/Makefile
@@ -4,10 +4,10 @@ archive_head:
 	cd ../../.. && git archive --format=tar master | gzip -9 >etc/docker/c9hub-common/src.tar.gz
 
 archive_stash:
-	cd ../../.. && git archive --format=tar $$(git stash create) | gzip -9 >etc/docker/c9hub-common/src.tar.gz
+	cd ../../.. && export C=`git stash create`; echo $$C; git archive --format tar $$C | gzip -9 >etc/docker/c9hub-common/src.tar.gz
 
 build: archive_stash
-	docker build --rm=true -t 'tai_ide/hub/common:v0' .
+	docker build --rm=true -t 'tai_ide/hub_common:v0' .
 
 clean:
 	git gc --prune=now
