--- a/etc/docker/c9hub-nginx/nginx/sites-enabled/dashboard.conf
+++ b/etc/docker/c9hub-nginx/nginx/sites-enabled/dashboard.conf
@@ -14,6 +14,8 @@ server {
    ssl_ciphers  HIGH:!aNULL:!MD5;
    ssl_prefer_server_ciphers   on;
 
+   include /var/tmp/sites-enabled/*.conf;
+
    location / {
        proxy_pass http://c9hub-dashboard:8080/;
        proxy_set_header X-Forwarded-Host $host;
