--- a/etc/docker/c9hub-nginx/nginx/sites-enabled/dashboard.conf
+++ b/etc/docker/c9hub-nginx/nginx/sites-enabled/dashboard.conf
@@ -1,6 +1,11 @@
 # HTTPS server
 #
+   upstream up_dashboard {
+       server c9hub-dashboard:8080;
+   }
+
 server {
+   rewrite_log on;
    listen       443 ssl;
    server_name  localhost;
    error_page 497  https://$host:$server_port$request_uri;
@@ -14,11 +19,10 @@ server {
    ssl_ciphers  HIGH:!aNULL:!MD5;
    ssl_prefer_server_ciphers   on;
 
-   include /var/tmp/sites-enabled/*.conf;
-
    location / {
-       proxy_pass http://c9hub-dashboard:8080/;
+       proxy_pass http://up_dashboard/;
        proxy_set_header X-Forwarded-Host $host;
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
    }
+
 }
