--- a/etc/docker/c9hub-nginx/nginx/sites-enabled/dashboard.conf
+++ b/etc/docker/c9hub-nginx/nginx/sites-enabled/dashboard.conf
@@ -20,9 +20,11 @@ server {
    ssl_prefer_server_ciphers   on;
 
    location / {
-       proxy_pass http://up_dashboard/;
+       proxy_pass http://up_dashboard;
+       #proxy_redirect http://$host https://$host;
        proxy_set_header X-Forwarded-Host $host;
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+       #proxy_set_header X-Forwarded-Proto https;
    }
 
 }
