--- a/etc/docker/c9hub-nginx/nginx/nginx.conf
+++ b/etc/docker/c9hub-nginx/nginx/nginx.conf
@@ -30,4 +30,5 @@ http {
 
     include /etc/nginx/conf.d/*.conf;
     include /etc/nginx/sites-enabled/*.conf;
+    include /var/tmp/sites-enabled/*.conf;
 }
