--- a/c9hubapi/resources/etc/c9hub.default.yaml
+++ b/c9hubapi/resources/etc/c9hub.default.yaml
@@ -1,2 +1,4 @@
 public_ip: "192.168.103.116"
-validation_endpoints: [ 'https://172.17.42.1:3000/api/v1/me' ]
+validation_endpoints:
+  - "https://account.lab.fi-ware.org/user?access_token={}"
+  - "https://172.17.42.1:3000/api/v1/me"
