Creating a page to handle redirection ti ide

--- a/etc/docker/c9hub-nginx/nginx/sites-enabled/dashboard.conf
+++ b/etc/docker/c9hub-nginx/nginx/sites-enabled/dashboard.conf
@@ -20,6 +20,7 @@ server {
    ssl_prefer_server_ciphers   on;
 
    location / {
+       proxy_set_header Host $http_host;
        proxy_pass http://up_dashboard;
        #proxy_redirect http://$host https://$host;
        proxy_set_header X-Forwarded-Host $host;
