--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = tai-c9hub-rest
 author = Tai
-author-email = tai@thales.org
+author-email = tai@tai.org
 summary = cloud9 hub
 description-file = README
 license = Apache-2
